feat(SSL): hash에 대해서2

--- a/docs/5.SSL과암호화기술/1.기초이론/2.Hash에대해서.md
+++ b/docs/5.SSL과암호화기술/1.기초이론/2.Hash에대해서.md
@@ -2,7 +2,7 @@
 
 **해시 함수의 핵심 특징**
 
-해시 함수는 앞서 체크섬에서 발전한 형태로, 보안성을 크게 강화한 데이터 무결성 검증 기술입니다.
+해시 함수는 체크섬에서 발전한 형태로, 강력한 보안성을 제공하는 데이터 무결성 검증 기술입니다.
 
 **1. 단방향성 (One-way Property)**
 
@@ -21,91 +21,102 @@
 2, 7, 12, 17, 22, 27, 32, 37, 42, 47...
 무한히 많은 경우의 수 → 원본 특정 불가능!
 
-이것이 바로 "값의 유실"
+이것이 바로 "값의 유실" (정보 손실)
+몫이 버려지면서 원본을 복원할 수 없게 됨
 ```
 
 **2. 고정 길이 출력 (Fixed Output Length)**
 
-**5를 나누어서 나머지를 구했다고 한다면 값이 나누어떨어져서 0이거나 혹은 1~~4의 값을 가지거나, 나올 수 있는 경우의 수는 5가지로 제한된다. 값은 5보다 작은 0에서 4까지로 제한된다. 그래서 값의 크기가 0~~4로 특정되어진다.**
+**5를 나누어서 나머지를 구했다고 한다면 값이 나누어떨어져서 0이거나 혹은 14의 값을 가지거나, 나올 수 있는 경우의 수는 5가지로 제한된다. 값은 5보다 작은 0에서 4까지로 제한된다. 그래서 값의 크기가 04로 특정되어진다. 그래서 나머지 연산을 수행하는 경우 나누어 주는 숫자 범위로 제한하는 특징이 있다.**
 
 ```
 📏 고정 길이 출력의 특성
 
 모듈로 5 연산의 경우:
-입력값의 크기와 무관하게 출력 범위 고정
+┌─────────────────────────────────┐
+│입력값의 크기와 무관하게 출력 고정│
+│                                │
+│입력: 7          → 7%5 = 2      │
+│입력: 12345      → 12345%5 = 0  │  
+│입력: 999999     → 999999%5 = 4 │
+│입력: 1000000000 → 1000000000%5=0│
+│                                │
+│출력 범위: 0~4 (항상 5가지 경우) │
+└─────────────────────────────────┘
 
-┌─────────────────┐
-│입력: 7          │ → 7%5 = 2
-│입력: 12345      │ → 12345%5 = 0  
-│입력: 999999     │ → 999999%5 = 4
-│입력: 1000000000 │ → 1000000000%5 = 0
-└─────────────────┘
-           ↓
-    출력 범위: 0~4 (항상 5가지 경우)
-
-실제 해시 함수도 동일한 원리:
+실제 해시 함수도 동일 원리:
 - MD5: 항상 128bit (32글자 16진수)
 - SHA-256: 항상 256bit (64글자 16진수)
+- 입력이 1바이트든 1GB든 출력 길이 동일
 ```
-
-**그래서 나머지 연산을 수행하는 경우 나누어 주는 숫자 범위로 제한하는 특징이 있습니다.**
 
 **3. 데이터 무결성 확보**
 
 **그래서 이 Hash 함수를 어디다 사용하느냐 하면 바로 이 해시 함수를 데이터 무결성을 확보하는 데 사용한다. 데이터 무결성이란 이 데이터가 절대 변조 혹은 위조가 되지 않았다는 것을 증명하는 것이다. 그래서 실제로 이 Checksum이 할 일을 Hash로 대체하는 경우도 빈번하다.**
 
 ```
-🛡️ 체크섬 vs 해시 함수 비교
+🛡️ 체크섬에서 해시로의 진화
 
 체크섬의 한계:
 ┌─────────────────────────────────┐
-│원본: "PAY $100"                │
+│원본: "중요한 계약서"            │
 │체크섬: 45                      │
 │                                │
-│공격자가 조작:                  │
-│변조: "PAY $999"                │
-│새 체크섬: 78 (재계산 가능)     │
+│공격자의 조작:                  │
+│변조: "변조된 계약서"           │
+│새 체크섬: 78 (쉽게 재계산)     │
 │결과: 변조 탐지 실패 ❌        │
 └─────────────────────────────────┘
 
 해시 함수의 강화:
 ┌─────────────────────────────────┐
-│원본: "PAY $100"                │
-│해시: "a5f2d..."                │
+│원본: "중요한 계약서"            │
+│해시: "a5f2d8c3b1e4..."          │
 │                                │
-│공격자가 조작 시도:              │
-│변조: "PAY $999"                │
-│새 해시: "b7e4c..." (전혀 다름) │
-│결과: 변조 즉시 탐지 ✅        │
+│공격자의 조작 시도:              │
+│변조: "변조된 계약서"           │
+│새 해시: "f7e9a2d5c8b1..."       │
+│결과: 완전히 다른 해시값        │
+│      → 변조 즉시 탐지 ✅      │
 └─────────────────────────────────┘
 ```
 
-**해시 함수의 고급 특성**
+**좋은 해시 알고리즘의 조건**
 
-**기본적으로 Hash를 하는 방법은 어떤 수를 나눠서 나머지를 구해라. 그러면 해당 나머지 값으로 원래 숫자를 구하려면 이 몫을 버렸기 때문에 원래 숫자를 못 찾아낸다. 근데 이렇게 단순하게 처리하지는 않는다.**
-
-**이 경우의 수라는 범위가 굉장히 넓어야 하고 겹치는 숫자가 존재하면 안 된다. 이러한 것이 좋은 해시 알고리즘이다. 즉, 이 원본이 달라지면 이 결과값도 항상 다른 값이 나와야 한다.**
+**기본적으로 Hash를 하는 방법은 어떤 수를 나눠서 나머지를 구해라. 그러면 해당 나머지 값으로 원래 숫자를 구하려면 이 몫을 버렸기 때문에 원래 숫자를 못 찾아낸다. 근데 이렇게 단순하게 처리하지는 않는다. 이 경우의 수라는 범위가 굉장히 넓어야 하고 겹치는 숫자가 존재하면 안 된다. 이러한 것이 좋은 해시 알고리즘이다. 즉, 이 원본이 달라지면 이 결과값도 항상 다른 값이 나와야 한다.**
 
 ```
-⚙️ 좋은 해시 알고리즘의 조건
+⚙️ 좋은 해시 알고리즘의 핵심 조건
 
 1️⃣ 충돌 저항성 (Collision Resistance)
 서로 다른 입력 → 서로 다른 출력
 
-┌─────────────────┐
-│"password123"    │ → 해시값 A
-│"admin456"       │ → 해시값 B  
-│"user789"        │ → 해시값 C
-└─────────────────┘
-A ≠ B ≠ C (모두 달라야 함)
+┌─────────────────────────────────┐
+│"password123"    → 해시값 A      │
+│"admin456"       → 해시값 B      │  
+│"user789"        → 해시값 C      │
+│                                │
+│A ≠ B ≠ C (모두 달라야 함)       │
+│겹치는 해시값 = 충돌 발생 = 취약점│
+└─────────────────────────────────┘
 
-2️⃣ 넓은 출력 공간
-MD5: 2^128 = 340,282,366,920,938,463,463,374,607,431,768,211,456가지
-SHA-256: 2^256 = 더욱 광대한 경우의 수
+2️⃣ 넓은 출력 공간 (Wide Output Space)
+┌─────────────────────────────────┐
+│MD5: 2^128가지 경우의 수         │
+│SHA-256: 2^256가지 (훨씬 넓음)   │
+│                                │
+│숫자가 클수록 → 경우의 수 증가   │
+│           → 충돌 가능성 감소   │
+│           → 보안성 향상        │
+└─────────────────────────────────┘
 
-3️⃣ 눈사태 효과 (Avalanche Effect)  
-입력의 1비트 변화 → 출력의 50% 이상 변화
-"password" vs "passwore" → 완전히 다른 해시값
+3️⃣ 눈사태 효과 (Avalanche Effect)
+입력 1비트 변화 → 출력 50% 이상 변화
+┌─────────────────────────────────┐
+│"password"  → a1b2c3d4e5f6g7h8... │
+│"passwore"  → z9y8x7w6v5u4t3s2... │
+│            (완전히 다른 결과)   │
+└─────────────────────────────────┘
 ```
 
 **주요 해시 알고리즘**
@@ -117,14 +128,15 @@ SHA-256: 2^256 = 더욱 광대한 경우의 수
 
 MD 계열:
 ┌─────────────────────────────────┐
-│MD-5                            │
+│MD-5 (Message Digest 5)         │
 │• 128비트 출력                  │
 │• ❌ 패스워드 단방향 암호화 사용금지│
-│• 충돌 공격 취약점 발견         │
-│• 현재 보안용도 사용 중단       │
+│• 1996년 취약점 발견            │
+│• 2004년 충돌 공격 성공         │
+│• 현재: 체크섬 용도로만 제한 사용│
 └─────────────────────────────────┘
 
-SHA 계열:
+SHA 계열 (Secure Hash Algorithm):
 ┌─────────────────────────────────┐
 │SHA-1                           │
 │• 160비트 출력                  │
@@ -138,6 +150,7 @@ SHA 계열:
 │                               │
 │SHA-3 (Keccak):                │
 │• 2015년 NIST 표준             │
+│• 완전히 다른 구조             │
 │• 미래 대비 알고리즘           │
 └─────────────────────────────────┘
 ```
@@ -150,25 +163,483 @@ SHA 계열:
 
 `"TestString" --> Hash(x) = y --> MrRq3uWeS1#N#aKHtSqb#m`
 
-**지금 원본 글자 TestString이라는 글자가 짧은데 해시 결과값에 글자 길이가 더 늘어났다. MD-5든 뭐든 어떤 해시를 하게 되면 길이가 항상 일정하다. 원본 길이에 상관없이 항상 일정된 길이로 결과값이 떨어진다. 위에 해시 결과로 TestString이라는 값을 추론하기가 어렵기 때문에 단방향이다라고 말하는 것이다.**
+**지금 원본 글자 TestString이라는 글자가 짧은데 해시 결과값에 글자 길이가 더 늘어났다. MD-5든 뭐든 어떤 해시를 하게 되면 길이가 항상 일정하다. 원본 길이에 상관없이 항상 일정된 길이로 결과값이 떨어진다. 위의 해시 결과로 TestString이라는 값을 추론하기가 어렵기 때문에 단방향이다라고 말하는 것이다.**
 
 ```
 🔍 해시 함수 동작 실례
 
-다양한 입력 길이:
+다양한 입력 크기 vs 일정한 출력:
 ┌─────────────────────────────────┐
-│입력: "A"                       │
-│MD5:  "7fc56270e7a70fa81a5935b72eacbe29" │
+│입력: "A" (1글자)                │
+│MD5:  "7fc56270e7a70fa81a5935b72eacbe29"│
 │                                │  
-│입력: "TestString"               │
+│입력: "TestString" (10글자)      │
 │MD5:  "MrRq3uWeS1#N#aKHtSqb#m"   │
 │                                │
-│입력: "매우 긴 문자열입니다..."   │
-│MD5:  "a1b2c3d4e5f6..."         │
+│입력: "매우 긴 소설 전체..." (수만 글자)│
+│MD5:  "a1b2c3d4e5f6..." (32글자) │
+│                                │
+│특징: 입력 크기 무관 → 출력 32글자 고정│
 └─────────────────────────────────┘
 
-특징:
-✅ 입력 길이: 1글자 ~ 수천글자
-✅ 출력 길이: 항상 32글자 (128비트)
-✅ 역추적: 해시값만으로 원본 추론 불가
+단방향성 입증:
+해시값 "MrRq3uWeS1#N#aKHtSqb#m"만 보고
+원본 "TestString" 추론 = 사실상 불가능
 ```
+
+**사용자 인증과 패스워드 보안**
+
+**위에서 이 MD-5를 가지고 패스워드에 사용하지 말라고 하는데 이는 왜 그런 것일까?**
+
+**우리는 사용자를 인증하는 경우가 많다. 이 사용자를 인증하는 방법에는 여러 방법이 존재한다.**
+
+- **소지: 열쇠**
+- **지식: 암기(패스워드)**
+- **생체: 지문**
+- **위치**
+
+**그래서 위 방법들을 조합해서 사용자를 인증하기도 하고 각 방법만 사용하기도 한다. 이 중에서 가장 많이 사용하는 것이 지식이다.**
+
+```
+🔐 사용자 인증의 4가지 요소
+
+1️⃣ 소지 기반 (Something you have)
+┌─────────────────────────────────┐
+│• 물리적 키, 스마트카드          │
+│• 휴대폰 (SMS 인증)             │
+│• USB 보안키, 토큰              │
+│• 출입카드                      │
+└─────────────────────────────────┘
+
+2️⃣ 지식 기반 (Something you know) ← 가장 널리 사용
+┌─────────────────────────────────┐
+│• 패스워드, PIN 번호            │
+│• 보안 질문 답변                │
+│• 패턴, 제스처                  │
+└─────────────────────────────────┘
+
+3️⃣ 생체 기반 (Something you are)
+┌─────────────────────────────────┐
+│• 지문, 홍채, 얼굴 인식          │
+│• 음성, 정맥 패턴               │
+│• DNA (극도 보안 환경)          │
+└─────────────────────────────────┘
+
+4️⃣ 위치 기반 (Somewhere you are)
+┌─────────────────────────────────┐
+│• GPS 좌표, IP 주소 범위        │
+│• 특정 네트워크 접속            │
+│• 물리적 위치 (사무실 내부)     │
+└─────────────────────────────────┘
+
+다단계 인증 (MFA) 예시:
+지식(패스워드) + 소지(휴대폰 SMS)
+지식(패스워드) + 생체(지문)
+```
+
+**평문 패스워드 저장의 위험성**
+
+**예를 들어 어딘가에 회원가입을 하면 회원가입을 할 때 아이디와 패스워드를 기입하게 된다. 그러면 이 회원가입을 하게 되는 사이트 혹은 기업에서는 이 사용자를 인증하기 위해서 ID와 Password를 결국 어떤 데이터베이스에 저장할 수밖에 없다. 만약에 패스워드 값이 1234일 때 이 1234를 보안상에서 평문이라고 한다. 이 말은 그냥 읽어 보면 누구라도 알아볼 수 있는 글자, 그것이 평문이다. 이렇게 평문으로 패스워드를 DB에 저장하면 안 된다. 이 관리자가 DB에 접속해서 해당 정보를 보고 이를 악용할 수도 있고 해킹당했을 때도 문제가 된다.**
+
+```
+⚠️ 평문 패스워드 저장의 위험성
+
+위험한 방식 (평문 저장):
+┌─────────────────────────────────┐
+│사용자 DB 테이블:                │
+│┌──────┬─────────────────────────┐│
+││USER_ID│PASSWORD                ││
+│├──────┼─────────────────────────┤│
+││john  │1234                    ││
+││mary  │password123             ││
+││admin │admin                   ││
+││user1 │qwerty                  ││
+│└──────┴─────────────────────────┘│
+└─────────────────────────────────┘
+
+발생 가능한 문제점:
+❌ DB 관리자가 모든 사용자 패스워드 확인 가능
+❌ 해킹 시 모든 패스워드 그대로 노출
+❌ 내부 직원에 의한 정보 오남용
+❌ 법적 책임 문제 (개인정보보호법 위반)
+❌ 기업 신뢰도 실추
+```
+
+**그래서 이러한 경우를 대비해서 이 패스워드를 평문으로 절대 저장하지 말라고 하는데 그러면 어떻게 저장해야 될까?**
+
+**바로 암호화해서 저장을 하라는 것이다. 이때 암호화도 무조건 단방향 암호화해서 저장해야 된다. 그러면 단방향 암호화가 뭐냐? 바로 해시를 하라는 말이다. 그래서 1234가 저장되는 것이 아니라 이를 해시해서 그 결과를 저장하게 되어있다.**
+
+```
+✅ 해시를 이용한 안전한 패스워드 저장
+
+안전한 방식 (해시 저장):
+┌─────────────────────────────────┐
+│사용자 DB 테이블:                │
+│┌──────┬─────────────────────────┐│
+││USER_ID│PASSWORD_HASH           ││
+│├──────┼─────────────────────────┤│
+││john  │81dc9bdb52d04dc20120a3... ││
+││mary  │482c811da5d5b4bc6d497f... ││
+││admin │21232f297a57a5a743894a... ││
+││user1 │d8578edf8458ce06fbc5bb... ││
+│└──────┴─────────────────────────┘│
+└─────────────────────────────────┘
+
+로그인 검증 과정:
+1. 사용자: "john" + 패스워드 "1234" 입력
+2. 시스템: "1234" → 해시 → "81dc9bdb52d04dc20120a3..."
+3. DB 조회: john의 해시값과 비교
+4. 일치하면 로그인 성공 ✅
+
+장점:
+✅ 관리자도 원본 패스워드 알 수 없음
+✅ DB 탈취되어도 원본 패스워드 보호
+✅ 단방향성으로 역추적 원천 차단
+```
+
+**해시 크래킹 공격과 MD5의 취약점**
+
+**그러면 이 단방향 해시를 해서 저장하면 문제가 없을까? 그렇지는 않다. 만약에 누군가가 이 DB를 탈취하게 되면 저장된 해시값을 가지고 원본을 추론할 수 없기 때문에 탈취한 탈취범들은 특정 S/W를 만든다.**
+
+```
+a
+aa
+aaa
+aaaa
+aaaa....
+
+패스워드로 사용가능한 문자
+```
+
+**패스워드를 만들 때 그 사이트마다 몇 자리 이상 영문 혹은 특수문자, 대문자를 써서 구성하라고 강제화하는데 이렇게 입력한 값을 해커가 S/W를 통해서 나올 수 있는 문자를 전부 가지고 있고 그중 하나의 값을 해시를 해보고 그 값이 DB에 있는 값과 맞는지 비교해 본다. 예를 들어 aaaa를 해시해보니 MrRq3uWeS1#N#aKHtSqb#m 이 값이 나왔다 그러면 내가 역으로 계산은 못하지만 결과가 같은 걸로 봐서 이 사람의 패스워드는 aaaa야 라고 추론할 수 있는 것이다.**
+
+```
+🎯 브루트 포스 공격 (Brute Force Attack)
+
+공격 과정:
+┌─────────────────────────────────┐
+│1단계: 모든 가능한 조합 생성      │
+│a → 해시 → 비교                 │
+│aa → 해시 → 비교                │
+│aaa → 해시 → 비교               │
+│aaaa → 해시 → 비교              │
+│...                             │
+│password → 해시 → 비교          │
+│1234 → 해시 → 비교              │
+└─────────────────────────────────┘
+
+┌─────────────────────────────────┐
+│2단계: 해시값 비교               │
+│시도: "aaaa"                    │
+│해시: "MrRq3uWeS1#N#aKHtSqb#m"   │
+│DB값: "MrRq3uWeS1#N#aKHtSqb#m"   │
+│결과: 일치! → 패스워드는 "aaaa"  │
+└─────────────────────────────────┘
+
+추론 논리:
+✅ 역계산은 불가능하지만
+✅ 같은 입력 → 같은 해시 (결정론적)
+✅ 따라서 같은 해시값 = 같은 원본
+```
+
+**이것이 해시가 갖고 있는 문제점이다. 그래서 MD-5를 가지고 패스워드와 같은 중요 정보에 해당 알고리즘으로 암호화를 하면 안 되는 이유는 단순하게 길이가 너무 짧다. 이걸 가지고 암호화를 하게 되면 일명 노가다 해킹 문자열을 만들어서 나올 때까지 해싱하는 브루트 포스 어택, 전수조사 공격이라고도 한다. 이 공격에 매우 취약하다.**
+
+```
+⚡ MD5가 패스워드에 부적절한 이유
+
+1️⃣ 짧은 출력 길이 (128비트)
+┌─────────────────────────────────┐
+│MD5: 2^128 = 약 3.4 × 10^38가지  │
+│현대 컴퓨팅: 1초에 수십억 해시 계산│
+│                                │
+│계산 예시:                      │
+│일반 PC: 초당 100만 MD5 해시     │
+│GPU 클러스터: 초당 수십억 해시   │
+│→ 짧은 패스워드는 수시간 내 크랙│
+└─────────────────────────────────┘
+
+2️⃣ 빠른 계산 속도 = 공격에 유리
+┌─────────────────────────────────┐
+│MD5 설계 목적: 빠른 체크섬 계산  │
+│문제점: 빠른 속도 = 빠른 크래킹  │
+│                                │
+│브루트 포스 공격 시간:           │
+│4자리 숫자: 수초               │
+│6자리 영문: 수분               │
+│8자리 영문+숫자: 수시간        │
+└─────────────────────────────────┘
+
+3️⃣ 레인보우 테이블 공격 취약
+┌─────────────────────────────────┐
+│미리 계산된 해시 테이블:         │
+│"password" → 5e884898da280471... │
+│"123456"   → e10adc3949ba59ab... │
+│"admin"    → 21232f297a57a5a7... │
+│...수백만 개 패스워드-해시 쌍   │
+│                                │
+│→ 즉시 대조 가능 (계산 불필요)   │
+└─────────────────────────────────┘
+```
+
+**그래서 보통 단방향 암호화를 할 때는 SHA-256을 주로 자주 사용한다.**
+
+**솔트(SALT)를 이용한 보안 강화**
+
+**그래서 이러한 경우의 수가 너무 짧은 게 문제구나 라고 생각하지만 이것만으로도 부족할 때가 있다. 그래서 SALT 값이라고 해서 보통 내부자들만 알고 있는 값이다. 예를 들어 비밀번호 1234라고 할 때 이는 너무 짧다. 그래서 앞뒤로 특정한 문자를 덧붙여서 TEST__1234__! 이런 식으로 사용자의 평문 앞 혹은 양쪽에 다 붙여서 길이를 늘림으로써 경우의 수를 증가시킨다. 이때 길이를 강제로 잡아 늘린 값을 SALT라고 한다.**
+
+```
+🧂 솔트(SALT)를 이용한 보안 강화
+
+솔트 적용 전 (취약):
+┌─────────────────────────────────┐
+│원본 패스워드: "1234"            │
+│해시: "81dc9bdb52d04dc20120a3..." │
+│                                │
+│문제점:                         │
+│• 짧은 패스워드 = 쉬운 크래킹   │
+│• 레인보우 테이블에 이미 존재   │
+│• 동일 패스워드 = 동일 해시     │
+└─────────────────────────────────┘
+
+솔트 적용 후 (강화):
+┌─────────────────────────────────┐
+│원본 패스워드: "1234"            │
+│솔트 값: "TEST__"  + "__!"       │
+│결합: "TEST__1234__!"            │
+│해시: "R6XDt$fHm#iA2p6m0O01W"    │
+│                                │
+│장점:                           │
+│• 긴 문자열 = 크래킹 시간 급증  │
+│• 레인보우 테이블 무력화        │
+│• 동일 패스워드도 다른 해시     │
+└─────────────────────────────────┘
+```
+
+```
+"TestString" + SALT
+Hash(x) = y
+R6XDt$fHm#iA2p6m0O01W
+```
+
+그래서 이 SALT를 추가적으로 집어넣어서 해시를 한다. 이렇게 함으로써 가장 큰 장점은 설령 해당 데이터가 유출된다 하더라도 SALT 값까지 추가해서 일치하는 해시를 찾아내기가 굉장히 힘들어진다.
+
+```
+🔒 솔트의 보안 효과
+
+솔트 미적용 시:
+┌─────────────────────────────────┐
+│사용자 A: "1234" → 해시값 X      │
+│사용자 B: "1234" → 해시값 X      │
+│사용자 C: "1234" → 해시값 X      │
+│                                │
+│문제: 동일 패스워드 = 동일 해시  │
+│→ 하나 크래킹하면 모두 노출     │
+└─────────────────────────────────┘
+
+솔트 적용 시:
+┌─────────────────────────────────┐
+│사용자 A: "SALT_A__1234" → 해시값 Y│
+│사용자 B: "SALT_B__1234" → 해시값 Z│
+│사용자 C: "SALT_C__1234" → 해시값 W│
+│                                │
+│결과: 동일 패스워드도 다른 해시  │
+│→ 개별 크래킹 필요 (공격 비용 ↑) │
+└─────────────────────────────────┘
+
+🛡️ 솔트의 추가 보안 효과
+
+1️⃣ 레인보우 테이블 무력화
+┌─────────────────────────────────┐
+│기존 레인보우 테이블:            │
+│"password" → 5e884898da280471... │
+│"123456"   → e10adc3949ba59ab... │
+│"admin"    → 21232f297a57a5a7... │
+│                                │
+│솔트 적용 후:                   │
+│"SALT_X__password__Y" → 새로운 해시│
+│→ 기존 테이블로는 크래킹 불가능  │
+│→ 솔트마다 새로운 테이블 필요    │
+└─────────────────────────────────┘
+
+2️⃣ 병렬 공격 방어
+┌─────────────────────────────────┐
+│솔트 없으면: 1번 크래킹 = 모든 계정│
+│솔트 있으면: 계정마다 개별 크래킹 │
+│                                │
+│공격 비용:                      │
+│• 1,000명 사용자 × 개별 크래킹   │
+│• 시간/비용 1,000배 증가        │
+└─────────────────────────────────┘
+```
+
+**대표적인 해시 기술 활용 예**
+
+**대표적인 Hash 기술 활용 예**
+
+- **무결성 확보**
+    - **인증서 검증 (공인 인증서)**
+    - **디지털 포렌식**
+    - **디지털 서명(Hash + PKI) 추후 설명**
+- **패스워드 단방향 암호화**
+- **블록체인**
+
+```
+🌐 해시 기술의 다양한 활용 분야
+
+1️⃣ 무결성 확보 (Data Integrity)
+┌─────────────────────────────────┐
+│인증서 검증:                    │
+│• SSL/TLS 인증서 해시값 검증    │
+│• 인증기관(CA) 서명 확인        │
+│• 중간자 공격 방지             │
+│                               │
+│디지털 포렌식:                  │
+│• 증거 파일의 해시값 계산       │
+│• 법정 증거능력 확보           │
+│• 변조 여부 확인               │
+│                               │
+│디지털 서명:                    │
+│• 문서 해시 + 개인키 암호화     │
+│• 송신자 신원 확인             │
+│• 부인 방지 (Non-repudiation)  │
+└─────────────────────────────────┘
+
+2️⃣ 패스워드 보안
+┌─────────────────────────────────┐
+│웹 서비스 로그인:               │
+│• 사용자 패스워드 해시 저장     │
+│• 로그인 시 해시 비교          │
+│• 솔트 + 키 스트레칭 적용      │
+└─────────────────────────────────┘
+
+3️⃣ 블록체인 기술
+┌─────────────────────────────────┐
+│암호화폐 (비트코인, 이더리움):   │
+│• 블록 해시 체인 연결          │
+│• 작업 증명 (Proof of Work)    │
+│• 거래 무결성 보장             │
+└─────────────────────────────────┘
+```
+
+**블록체인에서의 해시 활용**
+**블록체인의 본질은 어떤 정보라는 게 있으면 이 전체를 통으로 f(x)를 수행해서 결과 y를 구하는 것이다.**
+
+```
+hash sum
+f(-------) = y           f(-------) = y
+  |.    |                   |.    |
+  |.    |                   |.블록0 해시|
+  |.    |                   |.    |
+  | 정보 |                   |.정보 | 
+  -------                   ---------
+   블록 0번                    블록1번
+```
+
+**그래서 이 y가 이제 검사합처럼 hash sum 형태의 결과로 떨어진다. 이때 또 다른 정보에 그 이전의 블록 0번의 해시한 결과 y를 포함해서 다시 해시를 한다. 그렇게 해서 1번에 대한 해시를 추출하게 되면 이 1번 블록의 해시 결과와 같은 결과를 얻기 위해서는 그 앞 전 블록의 내용과 거기에 일치하는 해시 결과를 집어넣어야지만 똑같은 결과를 얻을 수 있다. 이렇게 함으로써 만약에 1번 블록에 내용을 변조하려면 그 이전 해시 결과값까지 변조해서 다시 재계산을 해야 한다.**
+
+```
+⛓️ 블록체인 해시 체인 구조
+
+블록 체인의 연결 구조:
+┌─────────────────────────────────┐
+│블록 0 (Genesis Block)           │
+│┌───────────────────────────────┐│
+││거래 데이터 1                 ││
+││거래 데이터 2                 ││
+││거래 데이터 3                 ││
+││타임스탬프                    ││
+││이전 블록 해시: 000...000     ││
+│└───────────────────────────────┘│
+│해시: A1B2C3D4E5F6...            │
+└─────────────────────────────────┘
+                ↓
+┌─────────────────────────────────┐
+│블록 1                          │
+│┌───────────────────────────────┐│
+││거래 데이터 4                 ││
+││거래 데이터 5                 ││
+││거래 데이터 6                 ││
+││타임스탬프                    ││
+││이전 블록 해시: A1B2C3D4E5F6...││ ← 블록 0의 해시
+│└───────────────────────────────┘│
+│해시: F7G8H9I0J1K2...            │
+└─────────────────────────────────┘
+                ↓
+┌─────────────────────────────────┐
+│블록 2                          │
+│┌───────────────────────────────┐│
+││거래 데이터 7                 ││
+││거래 데이터 8                 ││
+││타임스탬프                    ││
+││이전 블록 해시: F7G8H9I0J1K2...││ ← 블록 1의 해시
+│└───────────────────────────────┘│
+│해시: M3N4O5P6Q7R8...            │
+└─────────────────────────────────┘
+```
+
+```
+🔐 블록체인 변조 방지 메커니즘
+
+정상적인 블록체인:
+┌─────────────────────────────────┐
+│블록 0 → 해시 A                  │
+│블록 1 (이전해시: A) → 해시 B    │
+│블록 2 (이전해시: B) → 해시 C    │
+│블록 3 (이전해시: C) → 해시 D    │
+└─────────────────────────────────┘
+
+공격자가 블록 1 변조 시도:
+┌─────────────────────────────────┐
+│1단계: 블록 1 데이터 변조        │
+│→ 블록 1의 해시가 B에서 X로 변경 │
+│                                │
+│2단계: 연쇄 반응 발생            │
+│블록 2 (이전해시: B ≠ X) ❌     │
+│→ 블록 2도 수정 필요            │
+│                                │
+│3단계: 모든 후속 블록 수정 필요   │
+│블록 3, 4, 5... 무한 수정       │
+│→ 계산 비용 급증 (사실상 불가능) │
+└─────────────────────────────────┘
+
+보안 원리:
+✅ 과거 데이터 변조 = 모든 후속 블록 재계산 필요
+✅ 네트워크 참가자 과반수 동의 필요
+✅ 분산 저장으로 단일 지점 공격 불가
+✅ 작업 증명으로 높은 계산 비용 요구
+```
+
+**해시 함수의 미래와 발전 방향**
+
+```
+🚀 해시 기술의 미래 동향
+
+현재 동향:
+┌─────────────────────────────────┐
+│1️⃣ 양자 컴퓨팅 대비              │
+│• 양자 저항성 해시 개발          │
+│• NIST 포스트 양자 암호 표준화   │
+│• SHA-3, SHAKE 계열 주목         │
+│                                │
+│2️⃣ 성능 최적화                  │
+│• 하드웨어 가속 지원            │
+│• 병렬 처리 최적화              │
+│• 저전력 IoT 환경 적응          │
+│                                │
+│3️⃣ 특수 목적 해시               │
+│• 패스워드 해시: Argon2, scrypt  │
+│• 메모리 하드 함수 개발         │
+│• 키 스트레칭 기법 발전         │
+└─────────────────────────────────┘
+
+SSL/TLS에서의 역할:
+┌─────────────────────────────────┐
+│• 핸드셰이크 과정 무결성 검증    │
+│• 디지털 인증서 서명 확인        │
+│• 세션키 유도 함수 (HKDF)        │
+│• 메시지 인증 코드 (HMAC)        │
+│• 완료 메시지 (Finished) 검증    │
+└─────────────────────────────────┘
+```
+
+이렇게 **단순한 모듈로 연산에서 시작된 해시 함수**가 현대 **디지털 보안의 핵심 기술**로 발전했으며, **SSL/TLS 프로토콜부터 블록체인까지** 광범위하게 활용되고 있습니다. 특히 **패스워드 보안에서는 솔트와 키 스트레칭 기법**을 통해 브루트 포스 공격에 대한 저항성을 크게 향상시켰고, **블록체인에서는 데이터 무결성과 변조 방지**의 핵심 메커니즘으로 작동하고 있습니다.
