feat(SSL): 효율을 위한 혼합사용

--- a/docs/5.SSL과암호화기술/3.PKI시스템과인터넷/1.인터넷을위한비대칭키.md
+++ b/docs/5.SSL과암호화기술/3.PKI시스템과인터넷/1.인터넷을위한비대칭키.md
@@ -262,3 +262,247 @@ TCP/IP 보안 세션의 계층 구조
 ```
 
 이렇게 **비대칭키 체계는 인터넷 환경에서 대칭키의 한계를 극복**하는 혁신적 해결책이지만, **성능상의 제약으로 인해 실제로는 하이브리드 방식으로 구현**됩니다. **SSL/TLS가 바로 이러한 원리**로 작동하여 현재 모든 웹 보안의 기반이 되고 있습니다.
+
+
+### **PKI 시스템과 인터넷 - 혼합 사용으로 효율 극대화하이브리드 암호화 시스템의 구조**
+
+```
+
+			                     public
+			PC ---------------  인터넷 ------------- 서버
+			PC                                    Server Public
+			Symmetric Key                        Server Private
+
+                        터널
+Symmetric Key     < -------------->
++ Server Publicy Key로 암호화
+          
+			평문 ────→ 암호문 ── 터널 ─── 암호문 ────→ 평문
+
+```
+
+### 하이브리드 암호화 과정의 정확한 이해
+
+메모의 설명에서 일부 수정이 필요한 부분이 있습니다. 실제 과정을 정확히 설명하면:
+
+```
+실제 하이브리드 암호화 과정
+
+1단계: 서버 키 쌍 준비
+┌─────────────────────────────────┐
+│서버측:                         │
+│• Server_Private (서버만 보관)   │
+│• Server_Public (인증서로 배포)  │
+└─────────────────────────────────┘
+
+2단계: 세션키 생성 및 교환
+┌─────────────────────────────────┐
+│실제 방식 (메모와 약간 다름):    │
+│                                │
+│1. PC가 임시 세션키 생성        │
+│   (또는 키 교환 파라미터)      │
+│                                │
+│2. PC가 Server_Public으로       │
+│   세션키 암호화해서 전송       │
+│                                │
+│3. 서버가 Server_Private으로    │
+│   세션키 복호화               │
+│                                │
+│결과: 양측이 동일한 세션키 공유  │
+└─────────────────────────────────┘
+
+3단계: 대칭키로 실제 데이터 암호화
+┌─────────────────────────────────┐
+│PC → 서버: 세션키로 암호화      │
+│서버 → PC: 동일 세션키로 복호화 │
+│                                │
+│양방향 모두 같은 세션키 사용    │
+└─────────────────────────────────┘
+```
+
+**PC와 서버가 비밀 통신을 한다고 했을 때 서버측에서는 키 한쌍을 생성한다. 이때 PC쪽에서는 대칭키를 생성한다. 그래서 서버측 공개키, 보안성을 부여하는 키를 PC쪽에 보낸다. 이때 이 키라는 것도 일종의 정보이기 때문에 서버가 보내준 Public Key로 PC쪽 대칭키를 암호화시켜서 전달한다.**
+
+### 세션키의 개념과 특성
+
+**그러면 PC쪽에서 서버가 가진 Private Key로 암호화를 풀어서 PC쪽 대칭키를 추출할 수 있다. 대칭키는 효율이 좋다. 그래서 실제로 어떤 평문을 대칭키로 암호화한 후 서버측에 전달하면 서버측은 이전에 전달받은 대칭키로 평문을 복호화한다. 그래서 이때 PC에서 만든 대칭키를 Session Key라고도 한다.**
+
+```
+세션키(Session Key)의 특성
+
+세션키 생성과 관리:
+┌─────────────────────────────────┐
+│세션키 생성:                    │
+│• 연결마다 새로 생성            │
+│• 임시적 사용 (세션 종료시 폐기)│
+│• 고품질 난수로 생성            │
+│                               │
+│세션키 크기:                    │
+│• AES-128: 128비트              │
+│• AES-256: 256비트              │
+│• ChaCha20: 256비트             │
+└─────────────────────────────────┘
+
+세션키 vs 마스터키:
+┌─────────────────────────────────┐
+│실제 SSL/TLS에서는:             │
+│                               │
+│1. 마스터 시크릿 생성           │
+│2. 마스터 시크릿에서 여러 키 유도│
+│   • 암호화 키 (양방향 각각)    │
+│   • MAC 키 (무결성 검증)       │
+│   • IV (초기화 벡터)           │
+│                               │
+│장점: 더 정교한 보안 관리       │
+└─────────────────────────────────┘
+```
+
+### 다중 클라이언트 환경에서의 보안
+
+**그래서 이 서버와 통신하는 여러 PC가 있고 이 PC마다 고유한 세션키가 있다면 보안성이 더 뛰어나진다.**
+
+```
+다중 클라이언트 세션 관리
+
+서버 관점에서의 세션 관리:
+┌─────────────────────────────────┐
+│서버 (1대)                      │
+│├─ 세션1: PC-A ↔ 세션키_A      │
+│├─ 세션2: PC-B ↔ 세션키_B      │
+│├─ 세션3: PC-C ↔ 세션키_C      │
+│└─ ...                          │
+│                               │
+│각 세션키 특성:                 │
+│• 완전히 독립적                │
+│• 서로 다른 키값               │
+│• 개별적 생명주기              │
+└─────────────────────────────────┘
+
+보안상 이점:
+┌─────────────────────────────────┐
+│1️⃣ 격리된 보안 (Isolated Security)│
+│• PC-A 세션키 노출 ≠ PC-B 영향  │
+│• 부분적 보안 침해 제한         │
+│                               │
+│2️⃣ 확장성 (Scalability)        │
+│• 동시 접속자 수천명 지원       │
+│• 각자 독립적 암호화 채널       │
+│                               │
+│3️⃣ 감사 추적 (Audit Trail)     │
+│• 세션별 로그 관리              │
+│• 개별 보안 사고 추적 가능      │
+└─────────────────────────────────┘
+```
+
+### 하이브리드 암호화의 성능 이점
+
+**이렇게 혼합 사용을 통해 효율을 극대화할 수 있다.**
+
+```
+성능 비교 분석
+
+순수 비대칭키 vs 하이브리드:
+┌─────────────────────────────────┐
+│순수 RSA-2048 방식:             │
+│• 1MB 파일 암호화: 30초~수분    │
+│• CPU 사용률: 90~100%           │
+│• 메모리: 높은 사용량           │
+│• 배터리: 급속 소모             │
+│                               │
+│하이브리드 방식:                │
+│• 키 교환: 100~500ms (1회)      │
+│• 1MB 파일 암호화: 10~50ms      │
+│• CPU 사용률: 5~15%             │
+│• 메모리: 효율적 사용           │
+│• 배터리: 최소 영향             │
+└─────────────────────────────────┘
+
+실제 측정 예시 (1GB 파일):
+┌─────────────────────────────────┐
+│순수 RSA: 수시간 소요           │
+│하이브리드: 1~2초 소요          │
+│                               │
+│성능 향상: 1000배 이상!         │
+└─────────────────────────────────┘
+```
+
+### SSL/TLS에서의 실제 구현
+
+```
+실제 HTTPS 연결 과정
+
+1단계: TCP 연결 설정
+Client ←→ Server: TCP 3-Way Handshake
+
+2단계: SSL/TLS 핸드셰이크
+┌─────────────────────────────────┐
+│1. Client Hello                 │
+│   • 지원 암호화 알고리즘 목록   │
+│   • 임시 난수 값               │
+│                               │
+│2. Server Hello                │
+│   • 선택된 암호화 알고리즘     │
+│   • 서버 인증서 (공개키 포함)  │
+│   • 서버 임시 난수 값          │
+│                               │
+│3. Key Exchange                │
+│   • 클라이언트가 pre-master secret 생성│
+│   • 서버 공개키로 암호화해서 전송│
+│                               │
+│4. Session Key 생성             │
+│   • 양측이 동일한 세션키 계산   │
+│   • pre-master + 난수값 조합    │
+└─────────────────────────────────┘
+
+3단계: 보안 데이터 통신
+모든 HTTP 데이터를 세션키로 AES 암호화
+```
+
+### 하이브리드 방식의 추가 이점
+
+```
+보안과 효율성 외의 이점
+
+1️⃣ 표준화와 호환성
+┌─────────────────────────────────┐
+│• SSL/TLS 국제 표준             │
+│• 모든 브라우저 지원            │
+│• 다양한 플랫폼 호환            │
+└─────────────────────────────────┘
+
+2️⃣ 유연성과 확장성
+┌─────────────────────────────────┐
+│• 암호화 알고리즘 교체 가능     │
+│• Perfect Forward Secrecy 지원  │
+│• 키 길이 조절 가능             │
+└─────────────────────────────────┘
+
+3️⃣ 비용 효율성
+┌─────────────────────────────────┐
+│• 서버 하드웨어 요구사항 절약   │
+│• 네트워크 대역폭 효율적 사용   │
+│• 클라우드 비용 절감            │
+└─────────────────────────────────┘
+```
+
+### 보안 강화 기법
+
+```
+하이브리드 방식의 보안 강화
+
+Perfect Forward Secrecy (PFS):
+┌─────────────────────────────────┐
+│• 세션마다 새로운 키 생성       │
+│• 과거 세션키 노출되어도 안전   │
+│• Ephemeral 키 교환 사용        │
+│  (DHE, ECDHE)                 │
+└─────────────────────────────────┘
+
+인증서 체인 검증:
+┌─────────────────────────────────┐
+│• 서버 신원 확인                │
+│• 중간자 공격 방지              │
+│• CA 계층 구조 활용             │
+└─────────────────────────────────┘
+```
+
+이렇게 **하이브리드 암호화는 비대칭키의 보안성과 대칭키의 효율성을 모두 얻는** 현실적인 해결책입니다. **현재 모든 웹 보안(HTTPS), VPN, 메신저 보안** 등이 이 원리로 작동하며, **인터넷 보안의 표준**이 되었습니다.
